--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
 </head>
 <body>
   <main>
     <article>
-      <header>
-        <h1>Queen of the Black Coast</h1>
-        <p>By Robert E. Howard, 1934</p>
+      <header class="text-center">
+        <h1 class="push-0">Queen of the Black Coast</h1>
+        <p class="italic">By Robert E. Howard, 1934</p>
       </header>
       <hr>
       <h2>1. Conan Joins the Pirates</h2>
-      <aside>
-        <p><span>Believe green buds awaken in the spring,
-          That autumn paints the leaves with somber fire;
-          Believe I held my heart inviolate
-          To lavish on one man my hot desire.
-          — The Song of Bélit</span></p>
-      </aside>
+      <blockquote>
+        <p>Believe green buds awaken in the spring,</p>
+        <p>That autumn paints the leaves with somber fire;</p>
+        <p>Believe I held my heart inviolate</p>
+        <p>To lavish on one man my hot desire.</p>
+        <p>— The Song of Bélit</p>
+      </blockquote>
       <p>Hoofs drummed down the street that sloped to the wharfs. The folk that yelled and scattered had only a fleeting glimpse of a mailed figure on a black stallion, a wide scarlet cloak flowing out on the wind. Far up the street came the shout and clatter of pursuit, but the horseman did not look back. He swept out onto the wharfs and jerked the plunging stallion back on its haunches at the very lip of the pier. Seamen gaped up at him, as they stood to the sweep and striped sail of a high-prowed, broad-waisted galley. The master, sturdy and black-bearded, stood in the bows, easing her away from the piles with a boat-hook. He yelled angrily as the horseman sprang from the saddle and with a long leap landed squarely on the mid-deck.</p>
       <p>“Who invited you aboard?”</p>
       <p>“Get under way!” roared the intruder with a fierce gesture that spattered red drops from his broadsword.</p>
@@ -37,7 +38,7 @@
       <p>The swordsman glanced back at the rapidly receding docks, where the figures still gesticulated helplessly, evidently having trouble in finding a boat swift enough to overhaul the fast-sailing galley.</p>
       <p>“I am Conan, a Cimmerian,” he answered. “I came into Argos seeking employment, but with no wars forward, there was nothing to which I might turn my hand.”</p>
       <p>...</p>
-      </hr>
+      <hr>
     </article>
   </main>
 </body>
