--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <p>Hoofs drummed down the street that sloped to the wharfs. The folk that yelled and scattered had only a fleeting glimpse of a mailed figure on a black stallion, a wide scarlet cloak flowing out on the wind. Far up the street came the shout and clatter of pursuit, but the horseman did not look back. He swept out onto the wharfs and jerked the plunging stallion back on its haunches at the very lip of the pier. Seamen gaped up at him, as they stood to the sweep and striped sail of a high-prowed, broad-waisted galley. The master, sturdy and black-bearded, stood in the bows, easing her away from the piles with a boat-hook. He yelled angrily as the horseman sprang from the saddle and with a long leap landed squarely on the mid-deck.</p>
       <p><span class="hang-punc">“</span>Who invited you aboard?”</p>
       <p><span class="hang-punc">“</span>Get under way!” roared the intruder with a fierce gesture that spattered red drops from his broadsword.</p>
-      <p><span class="hang-punc">“</span>But we’re bound for the coasts of Kush!” expostulated the master.</p>          <p>“Then I’m for Kush! Push off, I tell you!” The other cast a quick glance up the street, along which a squad of horsemen were galloping; far behind them toiled a group of archers, crossbows on their shoulders.</p>
+      <p><span class="hang-punc">“</span>But we’re bound for the coasts of Kush!” expostulated the master.</p>
+      <p><span class="hang-punc">“</span>Then I’m for Kush! Push off, I tell you!” The other cast a quick glance up the street, along which a squad of horsemen were galloping; far behind them toiled a group of archers, crossbows on their shoulders.</p>
       <p><span class="hang-punc">“</span>Can you pay for your passage?” demanded the master.</p>
       <p><span class="hang-punc">“</span>I pay my way with steel!” roared the man in armor, brandishing the great sword that glittered bluely in the sun. “By Crom, man, if you don’t get under way, I’ll drench this galley in the blood of its crew!”</p>
       <p>The shipmaster was a good judge of men. One glance at the dark scarred face of the swordsman, hardened with passion, and he shouted a quick order, thrusting strongly against the piles. The galley wallowed out into clear water, the oars began to clack rhythmically; then a puff of wind filled the shimmering sail, the light ship heeled to the gust, then took her course like a swan, gathering headway as she skimmed along.</p>
@@ -34,7 +35,7 @@
       <p><span class="hang-punc">“</span>If we must travel together,” said the master, “we may as well be at peace with each other. My name is Tito, licensed master-shipman of the ports of Argos. I am bound for Kush, to trade beads and silks and sugar and brass-hilted swords to the black kings for ivory, copra, copper ore, slaves and pearls.”</p>
       <p>The swordsman glanced back at the rapidly receding docks, where the figures still gesticulated helplessly, evidently having trouble in finding a boat swift enough to overhaul the fast-sailing galley.</p>
       <p><span class="hang-punc">“</span>I am Conan, a Cimmerian,” he answered. “I came into Argos seeking employment, but with no wars forward, there was nothing to which I might turn my hand.”</p>
-      <p class="push-2">...</p>
+      <p class="push-2">…</p>
       <hr class="push-2">
     </article>
   </main>
